--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               </div>
             </div>
             <div class="card-back">
-              <img src="../assets/кот-удивление.gif" loading="lazy" />
+              <img src="assets/кот-удивление.gif" loading="lazy" />
             </div>
           </div>
         </div>
